[package]
name = "parser_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
# Reqwest for making HTTP requests
reqwest = { version = "0.12.9", features = ["blocking", "json"] }

# Scraper for parsing the HTML and extracting links
scraper = "0.21.0"

# Tokio for async runtime (needed by reqwest if using async)
tokio = { version = "1", features = ["full"] }

