[package]
name = "parser_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
indicatif = "0.17.9"
log = "0.4.22"
log4rs = "1.3.0"
# Reqwest for making HTTP requests
reqwest = { version = "0.12.9", features = ["blocking", "json"] }

# Scraper for parsing the HTML and extracting links
scraper = "0.21.0"
threadpool = "1.8.1"

# Tokio for async runtime (needed by reqwest if using async)
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
